--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build && node index.cjs",
+    "build": "tsc && vite build",
+    "start": "node index.js",
     "preview": "vite preview"
   },
   "dependencies": {
